welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:22: error: value ==- is not a member of Int
			if (y==-6+diag) {diag=diag+1
                             ^